tests/ui/valid_parent.stderr
error[E0277]: the trait bound `Eth: StackingAnchor<Ipv4>` is not satisfied
 --> tests/ui/valid_parent.rs:8:17
  |
8 |     let x = eth / udp;
  |                 ^ the trait `StackingAnchor<Ipv4>` is not implemented for `Eth`
  |
  = help: the trait `StackingAnchor<Eth>` is implemented for `Eth`
  = help: for that trait implementation, expected `Eth`, found `Ipv4`
  = note: required for `crabnet::transport::Udp` to implement `Stack<Eth>`
  = note: required for `Eth` to implement `Div<crabnet::transport::Udp>`
